...
              <Text style={styles.headerTitle}>{editingTask ? 'Edit Task' : `Plan: ${planName}`}</Text>
              <TouchableOpacity onPress={onClose}>
                <IconSymbol name={'close' as IconSymbolName} size={32} color="white" testID="close-task-view-button"/>
              </TouchableOpacity>
            </View>
...
                    placeholder="Enter task name..."
                    placeholderTextColor="#b2b3b8"
                    testID='task-name-input-edit-task'
                    editable={editingTaskId !== null && tasks.find(t => t.id === editingTaskId)?.name !== 'Start Location'}
                />
...
                        darkTheme={true}
                        currentVal={tempTaskLocation} // Show current temp location
                        testID='location-dropdown-edit-task'
                    />
                </View>
...
                                onChange={onTimeChange}
                                themeVariant="dark"
                                testID='time-picker-edit-task'
                            />
                        ) : (
...
                        style={{ ...styles.editTaskActionButton, backgroundColor: '#555' }} // Cancel button
                        onPress={() => setEditingTask(false)} // Go back without saving
                        testID='cancel-edit-button-task'
                    >
                        <Text style={{ color: 'white', fontSize: 16 }}>Cancel</Text>
...
                        style={{ ...styles.editTaskActionButton, backgroundColor: '#00AA44' }} // Save button
                        onPress={saveTaskEdit}
                        testID='save-button-task'
                    >
                        <Text style={{ color: 'white', fontSize: 16 }}>Save</Text>
...
                                        style={styles.editButton}
                                        onPress={() => editTask(item)}
                                        testID={`edit-icon-task`}
                                      >
                                        <IconSymbol
...
                                          style={styles.deleteButton}
                                          onPress={() => deleteTask(item)}
                                          testID={`delete-icon-task`}
                                      >
                                          <IconSymbol
...
                                      size={16}
                                      color="#b2b3b8"
                                      testID={`location-icon-task`}
                                  />
                                  <Text style={styles.taskItemSubText}>{itemLocation}</Text>
...
                                          size={16}
                                          color="#b2b3b8"
                                          testID={`time-icon-task`}
                                      />
                                      <Text style={styles.taskItemSubText}>{itemTime}</Text>
...
                                      style={styles.directionsButton}
                                      onPress={() => handleDirections(item)}
                                      testID={`directions-button-task`}
                                    >
                                      <Text style={{ color: 'white', fontSize: 16 }}>Directions</Text>
...
                                      style={styles.doneButton}
                                      onPress={() => markDone(itemId)}
                                      testID={`done-button-task`}
                                    >
                                      <Text style={{ color: 'white', fontSize: 16 }}>Done</Text>
...
                      disabled={isAddEditPlanDisabled}
                      onPress={openPlanBuilder}
                      testID='plan-builder-button'
                    >
                      <Text style={{ color: 'white', fontSize: 16 }}>Add/Edit Plan</Text>
...
                        onPress={handleDeletePlanPress}
                        disabled={isDeletePlanDisabled}
                        testID='delete-plan-button'
                      >
                        <Text style={{ color: 'white', fontSize: 16,}}>Delete Plan</Text>
...
