...
              </TouchableOpacity>
            </View>

            <View style={styles.underlineBox} />
              <View style={styles.taskHeaderRow}>
                <Text style={styles.addTaskTitle}>Add Task</Text>
                <TouchableOpacity style={styles.viewTasksButton} onPress={() => openTaskView(tempTasks)} testID='view-current-tasks-button-location-view'>
                  <Text style={{ color: 'white', fontSize: 15 }}>View Current Tasks</Text>
                </TouchableOpacity>
              </View>

            <View style={styles.addTaskContainer}>
              <Text style={styles.addTaskHeader}>Task Name</Text>
              <TextInput
                style={styles.taskInput}
                placeholder="Enter task name..."
                placeholderTextColor="#b2b3b8"
                value={tempTaskName}
                onChangeText={setTempTaskName}
                testID='task-name-input'
              />
              <Text style={styles.addTaskHeader}>Location</Text>
              <View style={{ alignSelf: 'flex-start', marginLeft: -4 , marginBottom: 12, marginTop: 4}}>
                <AutoCompleteDropdown
                  ref={locationDropdownRef}
                  testID="locationSmartPlannerDropdown-start"
                  locked={false}
                  searchSuggestions={searchSuggestions}
                  setSearchSuggestions={setSearchSuggestions}
                  buildingData={buildingListPlusMore}
                  onSelect={(selected) => handleSearch(selected)}
                  darkTheme={true}
...
                    value={date}
                    mode="time"
                    is24Hour={false}
                    display="default"
                    onChange={onTimeChange}
                    themeVariant="dark"
                    testID='time-picker'
                  />
                ) : (
                <TouchableOpacity
                  onPress={() => {
                    DateTimePickerAndroid.open({
                      value: date,
...
