...
      <View style={styles.underlineBox} />
      <Text style={styles.noPlanText}>No current plan</Text>
      <View style={styles.underlineBox} />
      <TouchableOpacity
        style={styles.createPlanButton}
        onPress={handleCreatePlan}
        testID='create-plan-button'
      >
        <Text style={styles.createPlanButtonText}>Create New Plan</Text>
      </TouchableOpacity>
    </View>
  );

...
              allTasksCompleted ? (
                <>
                  <Text style={styles.noPlanText}>All tasks completed!</Text>
                  <TouchableOpacity
                    style={styles.viewPlanButton}
                    onPress={() => setTaskViewVisible(true)}
                    testID="view-plan-button"
                  >
                    <Text style={styles.viewPlanButtonText}>View Full Plan</Text>
                  </TouchableOpacity>
                </>
              ) : hasNextTask ? (
                <>
                  <View style={styles.taskHeaderRow}>
                    <Text style={styles.nextTaskLabel}>Next Task</Text>
                    <TouchableOpacity
                      style={styles.nextTaskDirectionsButton}
                      testID="get-directions-button-main-modal"
                      onPress={() => handleGetDirections(origin, destination)}
                    >
                      <Text style={{ color: 'white', fontSize: 15 }}>Get Directions</Text>
                    </TouchableOpacity>
                  </View>
                  <View style={styles.iconTextRow}>
...
