...
        {/* LOCATION BUTTON */}
        <View style={styles.bottomElements}>
          {locationServicesEnabled && (
            <RoundButton
              imageSrc={require("@/assets/images/recenter-map.png")}
              onPress={CenterOnLocation}
              testID="recenter-button"
            />
          )}
        </View>

        {/* SGW & LOY TOGGLE */}
          <LoyolaSGWToggleSheet
...
