appId: com.anonymous.MightyMammoths
---
- setLocation:
    latitude: 45.4954
    longitude: -73.5783
- tapOn:
    id: "campus-option-loy"
- tapOn:
    id: "campus-option-sgw"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "SGW"