appId: com.anonymous.MightyMammoths
---
- setLocation:
    latitude: 45.4954
    longitude: -73.5783
- tapOn:
    id: "campus-option-loy"
- assertVisible: 
    id: "recenter-button"
- tapOn:
    id: "recenter-button"
- assertVisible: 
    id: "marker-EV"